# Alin-AI-Pc

./: .gitignore  README.md  index.html  package-lock.json  package.json  progress-dashboard.html  progress-report.json  project-progress.html  scan_progress.py  snapshot.json  vite.config.ts
.zcode/plans/: plan-sess_192c50f6-519e-4fc8-8d42-60ac87871c66.md
data/personas/: aria.json  kai.json  (+1 more)
docs/: SETUP.md  algorithmic-art-philosophy.md  ilink-progress.md
skills/: home_control.py  reminder.py  translate.py  weather.py  web_search.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: context.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: capture.rs  chat.rs  cloud_provider.rs  cloud_tts_provider.rs  companion.rs  knowledge.rs  memory.rs  mod.rs  model.rs  persona.rs  plugin.rs  settings.rs  skill.rs  system.rs  voice.rs  wechat.rs  workflow.rs
src-tauri/src/emotion/: fusion.rs  mod.rs  text_emotion.rs  voice_emotion.rs
src-tauri/src/memory/: core_memory.rs  event_extractor.rs  extractor.rs  long_term.rs  mod.rs  short_term.rs  summarizer.rs
src-tauri/src/model_bus/: cloud.rs  mod.rs  ollama.rs  provider.rs  registry.rs  scheduler.rs  wusound.rs
src-tauri/src/model_bus/ilink/: client.rs
src-tauri/src/orchestrator/: mod.rs  pipeline.rs  workflow_engine.rs
src-tauri/src/perception/: audio_io.rs  camera.rs  mod.rs  screen.rs
src-tauri/src/plugin/: manifest.rs  mod.rs  registry.rs
src-tauri/src/proactive/: mod.rs
src-tauri/src/rag/: indexer.rs  mod.rs  retriever.rs
src-tauri/src/relationship/: mod.rs
src-tauri/src/skill/: builtin.rs  executor.rs  mod.rs  registry.rs  schema_validator.rs
src-tauri/src/storage/: mod.rs  models.rs  repo.rs  schema.sql
src-tauri/src/vector/: factory.rs  mod.rs  qdrant.rs  sqlite_vec.rs  store.rs
src-tauri/src/wechat/: mod.rs  sync.rs
src-tauri/src/worker/: ipc.rs  mod.rs  pool.rs  spawn.rs
workers/: asr_worker.py  download_models.py  embedding_worker.py  emotion_worker.py  llm_worker.py  protocol.py  requirements.txt  tts_worker.py  vad_worker.py
(+105 files in other folders)
